# kuik

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.qtcreator/: CMakeLists.txt.user.af783af
b/: Makefile  cmake_install.cmake
b/.qt/: .qmlls.build.ini.part  KUik_GUI_qml.cmake  KUik_GUI_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
b/.qt/deploy_qml_imports/: KUik_GUI.cmake
b/.qt/qml_imports/: KUik_GUI_build.rsp  KUik_GUI_conf.cmake  KUik_GUI_conf.rsp
b/.qt/rcc/: KUik_GUI_raw_qml_0.qrc  KUik_GUI_raw_qml_0_extra_qmldirs.qrc  qmake_KUik.qrc
b/.rcc/qmlcache/: KUik_GUI_qml_loader_file_list.rsp  all_aotstats.aotstatslist  module_KUik_GUI.aotstatslist
b/.rcc/qmllint/: KUik_GUI.rsp  KUik_GUI_json.rsp  KUik_GUI_module.rsp
b/KUik/: KUik_GUI_qml_module_dir_map.qrc  qmldir
b/KUik/qml/: Main.qml
b/KUik/qml/components/: MovieCard.qml  NavBar.qml
b/KUik/qml/pages/: DetailPage.qml  HomePage.qml  PlayerPage.qml
b/qmltypes/: KUik_GUI_foreign_types.txt
include/: apifetcher.h  mainwindow.h  movieplayer.h
qml/: Main.qml
qml/components/: LoadingSpinner.qml  MovieCard.qml  NavBar.qml
qml/pages/: DetailPage.qml  HomePage.qml  Login.qml  PlayerPage.qml  SearchPage.qml  Signup.qml  WatchHistory.qml
saved/: accounts.json  watch_history.json
src/: InternetArchive.cpp  InternetArchive.h  accountmanager.cpp  accountmanager.h  apifetcher.cpp  archiveapi.cpp  archiveapi.h  constants.h  download.cpp  download.h  main.cpp  mainwindow.cpp  movieplayer.cpp  tmdbapi.cpp  tmdbapi.h  watchhistorymanager.cpp  watchhistorymanager.h
