cmake_minimum_required(VERSION 3.16)
project(MoviePlayer VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets)

include_directories(include)

set(SOURCES
    src/main.cpp
    src/mainwindow.cpp
    src/movieplayer.cpp
    src/apifetcher.cpp
)

set(HEADERS
    include/mainwindow.h
    include/movieplayer.h
    include/apifetcher.h
)

add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})

target_link_libraries(${PROJECT_NAME}
    Qt6::Core
    Qt6::Widgets
)
